index.css
input,
textarea,
button,
select,
a {
    -webkit-tap-highlight-color: transparent;
}

@font-face {
    font-family: bebasBook;
    src: url(res/bebas_neue_pro_book.otf);
}

@font-face {
    font-family: bebasKai;
    src: url(res/bebas_kai.otf);
}

@font-face {
    font-family: auromiya;
    src: url(res/auromiya.ttf);
}

@property --background-color {
    syntax: "<color>";
    inherits: false;
    initial-value: #F6BEC4;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    width: 100%;
    height: 100%;
    background-color: var(--background-color);
    overflow-x: hidden;
}

.backgroundImage {
    position: absolute;
    height: 100%;
    left: 50%;
    transform: translate(-50%, 0%);
}

.loginContent {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    color: black;
}

h1 {
    margin-bottom: 8vh;
    font-family: auromiya;
    font-size: 2.2em;
}

p {
    font-family: bebasBook;
    font-size: 1.1em;
    line-height: 1.25;
    letter-spacing: 0.05em;
}

input {
    margin-top: 8vh;
    margin-bottom: 8vh;
    width: 80%;
    padding-left: 1em;
    padding-right: 1em;
    padding-top: 0.66em;
    padding-bottom: 0.66em;
    font-family: bebasBook;
    font-size: 1.1em;
    line-height: 1.25;
    letter-spacing: 0.05em;
    border: 1px solid #000;
    border-radius: 100px;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

input[type=text]:focus {
    border: 2px solid #47642D;
    outline: none;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

/* Phone design */
@media only screen and (max-width: 600px) {
    .loginContent {
        width: 80%;
    }
    .backgroundImage {
        height: 95%;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
    }
}

/* Large Phone design and portrait tablet */
@media only screen and (min-width: 600px) {
    .loginContent {
        width: 70%;
    }
}

/* Landscape tablets */
@media only screen and (min-width: 768px) {
    .loginContent {
        width: 50%;
    }
}

/* Laptop and desktop */
@media only screen and (min-width: 992px) {
    .loginContent {
        width: 40%;
    }
}

/* Large laptop and desktop */
@media only screen and (min-width: 1200px) {
    .loginContent {
        width: 35%;
    }
}

